# shunya-kv

./: .clang-format  .clang-tidy  CMakeLists.txt  Dockerfile  Dockerfile.aarch64  Dockerfile.aarch64.nodpdk  Dockerfile.ci  LICENSE  NOTICE  README.md  bench.py  build.sh  config.example.conf  config.txt  metric_fix.patch  perf.md  perf_changes_all.patch  test.cpp  test.py  timeline.md
.github/workflows/: ci.yaml
assets/: shunyaarch.drawio
docs/: architecture.md  commands.md  connection_model.md  design_decisions.md  future.md  server_class_diagram.md
include/: cmd_get.hh  cmd_info.hh  cmd_node_info.hh  cmd_quit.hh  cmd_set.hh  commands.hh  config_loader.hh  connection.hh  dbconfig.hh  eviction.hh  hash.hh  hash_wrapper.hh  hotpath_metrics.hh  kv_store.hh  kv_types.hh  metrics_logger.hh  proto_helpers.hh  protocol.hh  router.hh  router_metrics.hh  server.hh  server_debug.hh  service.hh  shard_stats.hh  wal.hh
include/allocator/: EntryProvider.hh  MemoryId.hh  MemorySlab.hh  MemorySlabProvider.hh  PageProvider.hh
include/conn/: LineEchoHandler.hh  class_diagram.md  class_diagram.mmd  connections.hh  orchestrator.hh  resp_handler.hh  socket_handler.hh  socket_server.hh
include/eviction/: eviction_config.hh  sieve_policy.hh
include/pool/: object_pool.hh  pool.hh  pool_config.hh
include/resp/: resp_parser.hh  resp_stream_processor.hh  resp_types.hh  resp_writer.hh
include/ttl/: entry.hh  heap_node.hh  ttl_cache.hh  ttl_policy.hh
src/: cmd_get.cc  cmd_info.cc  cmd_node_info.cc  cmd_quit.cc  cmd_set.cc  commands.cc  config_loader.cc  dump.txt  kv_store.cc  main.cc  metrics_logger.cc  node_info_helpers.cc  proto_helpers.cc  router.cc  scop_exit.cc  server.cc  server_debug.cc  service.cc
src/conn/: LineEchoHandler.cc  connections.cc  orchestrator.cc  resp_handler.cc  socket_handler.cc  socket_server.cc
src/eviction/: sieve_policy.cc
src/pool/: object_pool.cc
src/resp/: resp_parser.cc  resp_stream_processor.cc  resp_writer.cc
src/ttl/: ttl_cache.cc
tests/: hashtest.cc  test_fnv.c  test_hash_wrapper.cc  ttl_cache_test.cc
tests/e2e/: README.md  conftest.py  harness.py  resp_client.py  test_cmd_get.py  test_cmd_set.py  test_eviction.py  test_node_info.py
tests/unit/: CMakeLists.txt  cmd_get_test.cc  cmd_node_info_test.cc  cmd_set_test.cc  object_pool_test.cc  orchestrator_test.cc  resp_request_test.cc  resp_stream_extractor_test.cc  sieve_policy_test.cc  socket_handler_test.cc
